crates/kula-core/tests/snapshots/lexer__lex_comment_after_content.snap
---
source: crates/kula-core/tests/lexer.rs
expression: render_tokens(source)
---
  0..6   PersonKw
  7..12  Ident("alice")
 13..17  FieldKw(Name)
 17..18  Colon
 18..25  String("Alice")
 26..32  FieldKw(Gender)
 32..33  Colon
 33..39  EnumKw(Female)
 54..55  Newline
 55..55  Eof
