crates/kula-core/tests/snapshots/lexer__lex_indented_line.snap
---
source: crates/kula-core/tests/lexer.rs
expression: render_tokens(source)
---
  0..6   PersonKw
  7..12  Ident("alice")
 13..17  FieldKw(Name)
 17..18  Colon
 18..25  String("Alice")
 26..32  FieldKw(Gender)
 32..33  Colon
 33..39  EnumKw(Female)
 39..40  Newline
 40..42  Indent
 42..47  BirthKw
 48..51  Ident("m_x")
 51..52  Newline
 52..52  Eof
