crates/kula-core/tests/snapshots/lexer__lex_unterminated_string.snap
---
source: crates/kula-core/tests/lexer.rs
expression: render_tokens(source)
---
  0..6   PersonKw
  7..12  Ident("alice")
 13..17  FieldKw(Name)
 17..18  Colon
 18..25  Error("unterminated string literal: missing closing `\"`")
 25..25  Eof
