crates/kula-core/tests/snapshots/lexer__lex_version_decl.snap
---
source: crates/kula-core/tests/lexer.rs
expression: render_tokens(source)
---
  0..4   KulaKw
  5..8   Bare("0.1")
  8..9   Newline
  9..10  Newline
 10..16  PersonKw
 17..22  Ident("alice")
 23..27  FieldKw(Name)
 27..28  Colon
 28..35  String("Alice")
 36..42  FieldKw(Gender)
 42..43  Colon
 43..49  EnumKw(Female)
 49..50  Newline
 50..50  Eof
